// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: CostEditor should show a blank widget 1`] = `
<div
  className="base-tag-container nice-tags-container"
>
  <div
    className="nice-dropdown nice-form-control"
  >
    <button
      className="nice-btn"
      onClick={[Function]}
    >
      Add...
      <i
        className="icon fa-angle-down"
      />
    </button>
    <ul
      className="dropdown-menu"
      onClick={[Function]}
    >
      <li
        className={null}
        data-value="cp"
        onClick={[Function]}
      >
        <a>
          Copper
        </a>
      </li>
      <li
        className={null}
        data-value="sp"
        onClick={[Function]}
      >
        <a>
          Silver
        </a>
      </li>
      <li
        className={null}
        data-value="ep"
        onClick={[Function]}
      >
        <a>
          Electrum
        </a>
      </li>
      <li
        className={null}
        data-value="gp"
        onClick={[Function]}
      >
        <a>
          Gold
        </a>
      </li>
      <li
        className={null}
        data-value="pp"
        onClick={[Function]}
      >
        <a>
          Platinum
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Component: CostEditor should show coins in provided order 1`] = `
<div
  className="base-tag-container nice-tags-container"
>
  <div
    className="nice-dropdown nice-form-control"
  >
    <button
      className="nice-btn"
      onClick={[Function]}
    >
      Add...
      <i
        className="icon fa-angle-down"
      />
    </button>
    <ul
      className="dropdown-menu"
      onClick={[Function]}
    >
      <li
        className="disabled"
        data-value="cp"
        onClick={null}
      >
        <a>
          Copper
        </a>
      </li>
      <li
        className="disabled"
        data-value="sp"
        onClick={null}
      >
        <a>
          Silver
        </a>
      </li>
      <li
        className={null}
        data-value="ep"
        onClick={[Function]}
      >
        <a>
          Electrum
        </a>
      </li>
      <li
        className="disabled"
        data-value="gp"
        onClick={null}
      >
        <a>
          Gold
        </a>
      </li>
      <li
        className={null}
        data-value="pp"
        onClick={[Function]}
      >
        <a>
          Platinum
        </a>
      </li>
    </ul>
  </div>
  <div
    className="nice-tag"
  >
    <span
      className="nice-tag-label"
    >
      Gold
    </span>
    <span
      className="nice-tag-badge"
    >
      5
      <div
        className="nice-tag-dropdown hover"
      >
        <ul>
          <li>
            <a
              onClick={[Function]}
            >
              1
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              2
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              3
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              4
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              5
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              6
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              7
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              8
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              9
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              10
            </a>
          </li>
        </ul>
      </div>
    </span>
    <button
      className="nice-tag-btn"
      onClick={[Function]}
    >
      <i
        className="icon fa-trash-o"
      />
    </button>
  </div>
  <div
    className="nice-tag"
  >
    <span
      className="nice-tag-label"
    >
      Copper
    </span>
    <span
      className="nice-tag-badge"
    >
      5
      <div
        className="nice-tag-dropdown hover"
      >
        <ul>
          <li>
            <a
              onClick={[Function]}
            >
              1
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              2
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              3
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              4
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              5
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              6
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              7
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              8
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              9
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              10
            </a>
          </li>
        </ul>
      </div>
    </span>
    <button
      className="nice-tag-btn"
      onClick={[Function]}
    >
      <i
        className="icon fa-trash-o"
      />
    </button>
  </div>
  <div
    className="nice-tag"
  >
    <span
      className="nice-tag-label"
    >
      Silver
    </span>
    <span
      className="nice-tag-badge"
    >
      5
      <div
        className="nice-tag-dropdown hover"
      >
        <ul>
          <li>
            <a
              onClick={[Function]}
            >
              1
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              2
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              3
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              4
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              5
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              6
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              7
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              8
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              9
            </a>
          </li>
          <li>
            <a
              onClick={[Function]}
            >
              10
            </a>
          </li>
        </ul>
      </div>
    </span>
    <button
      className="nice-tag-btn"
      onClick={[Function]}
    >
      <i
        className="icon fa-trash-o"
      />
    </button>
  </div>
</div>
`;
